feat: Added functionality for get challenge details, challenge cards, and going to challenge details from swim lanes
